--- a/example/package.json
+++ b/example/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "next": "14.2.35",
     "react": "^18",
     "react-dom": "^18",
