--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "react-smooth-input",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "A smooth input component library for Next.js",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "homepage": "https://ponlponl123.github.io/react-smooth-input/",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ponlponl123/react-smooth-input.git"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
