--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
+    "cookies-next": "^6.1.1",
     "next": "14.2.35",
+    "nextjs-toploader": "^3.9.17",
     "react": "^18",
     "react-dom": "^18",
     "react-syntax-highlighter": "^16.1.0"
