--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "declarationDir": "dist"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "example"]
+  "exclude": ["node_modules", "dist", "web"]
 }
