--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-app",
+  "name": "web-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "nextjs-toploader": "^3.9.17",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.1",
     "react-syntax-highlighter": "^16.1.0"
   },
   "devDependencies": {
