--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "license": "MIT",
   "dependencies": {
     "clsx": "^2.1.1",
-    "motion": "^12.26.2"
+    "motion": "^12.26.2",
+    "tailwind-merge": "^3.4.0"
   }
 }
